tests/specs/ecosystem/sylc/step_spinner/0_0_1.test
sylc/step-spinner/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2377 [ERROR]: Constructors for derived classes must contain a 'super' call.
  constructor(msg: string | SpinnerOptions){}
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/StepSpinner.ts:4:3

